ajustando descrição dos imoveis

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="property-details">
                     <h3>Casa Horizonte Verde</h3>
-                    <p>Um lazer ao meio da natureza, ótimo para uma férias de verão</p>
+                    <p>Um lazer em meio da natureza, ótimo para as férias de verão</p>
                     <p>R$ 8.000.000.00</p>
                 </div>
             </div>
@@ -229,7 +229,7 @@
                 </div>
                 <div class="property-details">
                     <h3>Sobrado Cullen</h3>
-                    <p>O conforto de uma casa rústica com um tamanho ideal e bom localizado</p>
+                    <p>O conforto de uma casa rústica com um tamanho ideal e bem localizado</p>
                     <p>R$ 5.000.000.00</p>
                 </div>
             </div>
