--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="property-details">
                     <h3>Casa Horizonte Verde</h3>
-                    <p>Um lazer em meio da natureza, ótimo para as férias de verão</p>
+                    <p>Um lazer em meio a natureza, ótimo para as férias de verão</p>
                     <p>R$ 8.000.000.00</p>
                 </div>
             </div>
